# autoTab

./: .gitignore  Experiments.py  Experiments_streamlined.py  Experimetns_regularized_nets.py  README.md  metrics_report.csv  networks.py  pyproject.toml  simplified_PNET.py
llm-tips/: copilot-suggestions.md  mistral-large-2-suggestions-graph-comparison.md  reactome.py
src/: Experiments_streamlined.py  NNwithFeatureLayer.py  __init__.py  archis.py  baselineNN_nopl.py  baselineNN_pl.py  dataset_objs.py  networks.py  simplified_PNET.py  utils.py
